# Convex_hull

./: CMakeLists.txt  README.md  main.cpp  main3d.cpp  theme.cpp  theme3d.cpp  viewConvexHull.cpp
assets/: teste3d.blend
utils/: convexHull.cpp  convexHull.h  utils.cpp  utils.h
